--- a/05.React 脚手架/demo/src/App.css
+++ b/05.React 脚手架/demo/src/App.css
@@ -1,5 +1,11 @@
+.app {
+  display: flex;
+  gap: 5px;
+  padding: 5px;
+}
+
 .card {
-  box-shadow: 0px 0px 5px 2px grey;
+  box-shadow: 0px 0px 5px 1px rgba(128, 128, 128, 0.438);
   width: 200px;
   height: 200px;
   padding: 5px;
@@ -9,5 +15,10 @@
 .card > .title {
   font-size: 20px;
   font-weight: 800;
+  padding-bottom: 5px;
   border-bottom: 1px solid black;
+}
+
+.card > .content {
+  padding-top: 5px;
 }
